# gui_noros_01_29_19

./: README.MD
Git/: 99-hue.rules
Git/hybrid_act/haptic_generator/msg/: WSArray.msg
hybrid_act/haptic_generator/: CMakeLists.txt  package.xml
hybrid_act/haptic_generator/launch/: haptic.launch
hybrid_act/haptic_generator/msg/: WSArray.msg
hybrid_act/haptic_generator/src/: .haptic_control.py.swp  MAX518.py  haptic_control.py
hybrid_act/hue_launch/: CMakeLists.txt  package.xml
hybrid_act/hue_launch/launch/: hue.launch
hybrid_act/ir_correction/: CMakeLists.txt  package.xml
hybrid_act/ir_correction/src/: ir_correction.py  ir_corrector.py
hybrid_act/output_controller/: CMakeLists.txt  package.xml
hybrid_act/output_controller/launch/: .haptic.launch.swp  output.launch
hybrid_act/output_controller/src/: .Arduino.py.swp  Arduino.py  MAX518.py  frequency_control.py  output_control.py  testpy.py
hybrid_act/ufm_controller/: CMakeLists.txt  package.xml
hybrid_act/ufm_controller/src/: AD9833.py  MAX518.py  test.py  ufm_control.py
hybrid_act/ws_generator/: CMakeLists.txt  package.xml
hybrid_act/ws_generator/msg/: .WSArray.msg.swp
hybrid_act/ws_generator/src/: .gui_generator.py.swp  .test.py.swp  .ws_gen.py.swp  BallFrame.py  demo.py  demo_K.py  game.py  gui_generator.py  main.py  nextPage.py  output.csv  sinusoidal.py  start.py  startPage.py  t.csv  test.py  utils.py  ws_gen.py
hybrid_act/ws_generator/src/csvfiles/: asdf.csv  h.csv  jh.csv  u.csv  uy.csv  x.csv
hybrid_act/ws_generator/src/old_versions/: start.old  test.py
(+15 files in other folders)
