<?xml version="1.0"?>
<package>
  <name>hue_launch</name>
  <version>1.0.0</version>
  <description>hue launch files</description>

  <author email="kyle.deprow@slu.edu">Kyle DeProw</author> -->
  <maintainer email="kyle.deprow@slu.edu">Kyle DeProw</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
</package>
